--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
   "name": "apollo-schema-builder",
   "description": "A collection of tools to help modularize your Apollo schema definitions.",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "private": false,
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jovialis/apollo-schema-builder"
+  },
   "author": {
     "email": "dylan@sandboxlabs.co",
     "name": "Dylan Hanson (jovialis)"
