--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "apollo-schema-builder",
   "description": "A collection of tools to help modularize your Apollo schema definitions.",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "private": false,
   "license": "MIT",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "prepublish": "tsc",
   "repository": {
     "type": "git",
     "url": "https://github.com/jovialis/apollo-schema-builder"
@@ -15,5 +18,8 @@
   "dependencies": {
     "apollo-server": "^3.5.0",
     "graphql": "^16.0.1"
+  },
+  "devDependencies": {
+    "typescript": "^4.5.4"
   }
 }
