--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,9 +4,11 @@
     "target": "es5",
     "sourceMap": true,
     "outDir": "./dist",
-    "declaration": true
+    "declaration": true,
+    "esModuleInterop": true
   },
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "dist"
   ]
 }
