--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "apollo-schema-builder",
   "description": "A collection of tools to help modularize your Apollo schema definitions.",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "private": false,
   "license": "MIT",
   "main": "dist/index.js",
@@ -25,6 +25,6 @@
     "typescript": "^4.5.4"
   },
   "files": [
-    "lib/**/*"
+    "dist/**/*"
   ]
 }
